{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 9,
  "lineage": "1ab9593e-8e3d-21c7-9710-692da0906449",
  "resources": [
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:security-group/sg-0f16edcaf4611effc",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f16edcaf4611effc",
            "ingress": [],
            "name": "eksworkshop-eksctl-cluster-20221102153352504300000003",
            "name_prefix": "eksworkshop-eksctl-cluster-",
            "owner_id": "444943710238",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eksworkshop-eksctl-cluster"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eksworkshop-eksctl-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:security-group/sg-07e7413ddf73802cc",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-07e7413ddf73802cc",
            "ingress": [],
            "name": "eksworkshop-eksctl-node-20221102153352657500000004",
            "name_prefix": "eksworkshop-eksctl-node-",
            "owner_id": "444943710238",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eksworkshop-eksctl-node",
              "kubernetes.io/cluster/eksworkshop-eksctl": "owned"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eksworkshop-eksctl-node",
              "kubernetes.io/cluster/eksworkshop-eksctl": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3636428484",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f16edcaf4611effc",
            "self": false,
            "source_security_group_id": "sg-07e7413ddf73802cc",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2777526752",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f16edcaf4611effc",
            "self": false,
            "source_security_group_id": "sg-07e7413ddf73802cc",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2335419501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f16edcaf4611effc",
            "self": false,
            "source_security_group_id": "sg-07e7413ddf73802cc",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-53417962",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07e7413ddf73802cc",
            "self": false,
            "source_security_group_id": "sg-0f16edcaf4611effc",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-1662711318",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07e7413ddf73802cc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-3167013640",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07e7413ddf73802cc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-3260739077",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07e7413ddf73802cc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1609390656",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07e7413ddf73802cc",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3515537446",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07e7413ddf73802cc",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1905278727",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07e7413ddf73802cc",
            "self": false,
            "source_security_group_id": "sg-0f16edcaf4611effc",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3342134852",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07e7413ddf73802cc",
            "self": false,
            "source_security_group_id": "sg-0f16edcaf4611effc",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1633794416",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07e7413ddf73802cc",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3309181599",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07e7413ddf73802cc",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints_kubernetes_addons.module.aws_cloudwatch_metrics[0].module.helm_addon.module.irsa[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "irsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "amazon-cloudwatch",
            "metadata": [
              {
                "generation": 0,
                "name": "amazon-cloudwatch",
                "resource_version": "808",
                "uid": "9cef7c58-a462-4c61-b90e-60f6c37ae256"
              }
            ],
            "timeouts": {
              "delete": "15m"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_eks_cluster_auth.this",
            "module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.eks_blueprints.module.kms.aws_kms_key.this",
            "module.eks_blueprints_kubernetes_addons.data.aws_caller_identity.current",
            "module.eks_blueprints_kubernetes_addons.data.aws_eks_cluster.eks_cluster",
            "module.eks_blueprints_kubernetes_addons.data.aws_partition.current",
            "module.eks_blueprints_kubernetes_addons.data.aws_region.current",
            "module.eks_blueprints_kubernetes_addons.time_sleep.dataplane",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_blueprints_kubernetes_addons.module.metrics_server[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:network-acl/acl-04b1bc861818b211c",
            "default_network_acl_id": "acl-04b1bc861818b211c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04b1bc861818b211c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "444943710238",
            "subnet_ids": [
              "subnet-00715a0c313c32ab5",
              "subnet-04a9d0032747bdf33",
              "subnet-05595af4cb25463c1",
              "subnet-05a2b4bc25e8e743c",
              "subnet-05b72f3793c9ee483",
              "subnet-0a6f454e4dfd8d3e8"
            ],
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-default"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-default"
            },
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:route-table/rtb-0f4f6b3dd7c267cdd",
            "default_route_table_id": "rtb-0f4f6b3dd7c267cdd",
            "id": "rtb-0f4f6b3dd7c267cdd",
            "owner_id": "444943710238",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-default"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:security-group/sg-0690b4af45fccfde5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0690b4af45fccfde5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "444943710238",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-default"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-default"
            },
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a50c6ad560bada52",
            "domain": "vpc",
            "id": "eipalloc-0a50c6ad560bada52",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-246-16-50.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.246.16.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-eu-west-1a"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-eu-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:internet-gateway/igw-0118113c77e9f3bf1",
            "id": "igw-0118113c77e9f3bf1",
            "owner_id": "444943710238",
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc"
            },
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a50c6ad560bada52",
            "connectivity_type": "public",
            "id": "nat-0f0708bd028a3b1ad",
            "network_interface_id": "eni-092d29ec5717cec22",
            "private_ip": "10.0.0.253",
            "public_ip": "34.246.16.50",
            "subnet_id": "subnet-04a9d0032747bdf33",
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-eu-west-1a"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-eu-west-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0470e3af65455a8511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f0708bd028a3b1ad",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0470e3af65455a851",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0118113c77e9f3bf1",
            "id": "r-rtb-0e4309fc783d016671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e4309fc783d01667",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:route-table/rtb-0470e3af65455a851",
            "id": "rtb-0470e3af65455a851",
            "owner_id": "444943710238",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-private"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:route-table/rtb-0e4309fc783d01667",
            "id": "rtb-0e4309fc783d01667",
            "owner_id": "444943710238",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-public"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092a97420783d6c88",
            "route_table_id": "rtb-0470e3af65455a851",
            "subnet_id": "subnet-05b72f3793c9ee483"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096a451146a3624f4",
            "route_table_id": "rtb-0470e3af65455a851",
            "subnet_id": "subnet-0a6f454e4dfd8d3e8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab1ac65237b6e0c5",
            "route_table_id": "rtb-0470e3af65455a851",
            "subnet_id": "subnet-00715a0c313c32ab5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f89fd02f03596b70",
            "route_table_id": "rtb-0e4309fc783d01667",
            "subnet_id": "subnet-04a9d0032747bdf33"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cdacea0705b0715e",
            "route_table_id": "rtb-0e4309fc783d01667",
            "subnet_id": "subnet-05a2b4bc25e8e743c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0095b3d9ecd25f63f",
            "route_table_id": "rtb-0e4309fc783d01667",
            "subnet_id": "subnet-05595af4cb25463c1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:subnet/subnet-05b72f3793c9ee483",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b72f3793c9ee483",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444943710238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/eksworkshop-eksctl": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-private-eu-west-1a",
              "kubernetes.io/cluster/eksworkshop-eksctl": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:subnet/subnet-0a6f454e4dfd8d3e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6f454e4dfd8d3e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444943710238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/eksworkshop-eksctl": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-private-eu-west-1b",
              "kubernetes.io/cluster/eksworkshop-eksctl": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:subnet/subnet-00715a0c313c32ab5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00715a0c313c32ab5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "444943710238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/eksworkshop-eksctl": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-private-eu-west-1c",
              "kubernetes.io/cluster/eksworkshop-eksctl": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:subnet/subnet-04a9d0032747bdf33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a9d0032747bdf33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "444943710238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/eksworkshop-eksctl": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-public-eu-west-1a",
              "kubernetes.io/cluster/eksworkshop-eksctl": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:subnet/subnet-05a2b4bc25e8e743c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a2b4bc25e8e743c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "444943710238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/eksworkshop-eksctl": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-public-eu-west-1b",
              "kubernetes.io/cluster/eksworkshop-eksctl": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:subnet/subnet-05595af4cb25463c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05595af4cb25463c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "444943710238",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/eksworkshop-eksctl": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc-public-eu-west-1c",
              "kubernetes.io/cluster/eksworkshop-eksctl": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0988d187b4dd10991"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:444943710238:vpc/vpc-0988d187b4dd10991",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b1bc861818b211c",
            "default_route_table_id": "rtb-0f4f6b3dd7c267cdd",
            "default_security_group_id": "sg-0690b4af45fccfde5",
            "dhcp_options_id": "dopt-39e6d95f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0988d187b4dd10991",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4f6b3dd7c267cdd",
            "owner_id": "444943710238",
            "tags": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc"
            },
            "tags_all": {
              "Blueprint": "eks-cluster-with-new-vpc",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-cluster-with-new-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}